# CLUEstering

./: .clang-format  .clang-tidy  .clangd  .cmake-format.yml  .codecov.yml  .coveragerc  .gitattributes  .gitignore  .gitmodules  .pylintrc  .zenodo.json  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  MANIFEST.in  README.md  flake.nix  packaging.sh  pyproject.toml  pytest.py  run_test.sh  segmentation.py  setup.py  shell.nix  test_draft.py  vcpkg.json
.env/: test_env.yml
.github/: codecov.yml
.github/workflows/: bench_profile_serial.yml  benchmark-amd-gpu.yml  benchmark-nvidia-gpu.yml  benchmark-serial.yml  check_package_version.yml  clang_format.yml  cmake-format-check.yml  codacy.yml  codeql.yml  (+25 more)
CLUEstering/: .pylintrc  CLUEstering.hpp  CLUEstering.py  Makefile  __init__.py  binding.cc  sissa.csv
CLUEstering.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
CLUEstering/BindingModules/: CMakeLists.txt  MetricDescriptor.hpp  Run.hpp  binding_cpu.cc  binding_cpu.cpp  binding_cpu_omp.cpp  binding_cpu_tbb.cpp  binding_gpu_cuda.cpp  binding_gpu_hip.cpp  binding_kernels.cc  binding_kernels.cpp
CLUEstering/BindingModules/cuda/: CMakeLists.txt  binding_gpu_cuda.cpp
CLUEstering/BindingModules/hip/: CMakeLists.txt  binding_gpu_hip.cpp
CLUEstering/BindingModules/openmp/: CMakeLists.txt  binding_cpu_omp.cpp
CLUEstering/BindingModules/serial/: CMakeLists.txt  binding_cpu.cpp
CLUEstering/BindingModules/sycl/: CMakeLists.txt  binding_cpu_sycl.cpp  binding_gpu_sycl.cpp
CLUEstering/BindingModules/tbb/: CMakeLists.txt  binding_cpu_tbb.cpp
benchmark/: cluerel.py
benchmark/dataset_size/: CMakeLists.txt  data_65536.csv  data_8192.csv  generate_data.py  main.cc  main.cpp  measures.csv  plot.py  pybind11  read_csv.hpp  script.py
benchmark/dataset_size/cpu/: CMakeLists.txt
benchmark/dataset_size/cuda/: CMakeLists.txt
benchmark/dataset_size/hip/: CMakeLists.txt
benchmark/dataset_size/sycl/: CMakeLists.txt  pybind11
benchmark/microbenchmarking/associator/hip/: CMakeLists.txt
benchmark/profiling/: CMakeLists.txt  main.cc  main.cpp  prof_cache.sh  read_csv.hpp
benchmark/profiling/cpu/: CMakeLists.txt
benchmark/profiling/cuda/: CMakeLists.txt
benchmark/profiling/hip/: CMakeLists.txt
benchmark/profiling/sycl/: CMakeLists.txt
benchmark/throughput/: CMakeLists.txt  defines.hpp  main.cpp  worker.cpp  worker.hpp
benchmark/throughput/cpu/: CMakeLists.txt
benchmark/throughput/cuda/: CMakeLists.txt
cmake/: CLUEsteringConfig.cmake.in  version.hpp.in
cpp/: pyproject.toml  setup.py
data/: aniso_1000.csv  batched_data.csv  batched_data_1024.csv  blob.csv  blobs_noise.csv  box.csv  circles.csv  circles_3d.csv  data_1024.csv  data_16384.csv  data_2048.csv  data_32768.csv  data_4096.csv  data_dim_10.csv  data_dim_2.csv  data_dim_3.csv  data_dim_5.csv  data_dim_6.csv  data_dim_8.csv  data_dim_9.csv  moon_3d.csv  moons.csv  sissa.csv  sissa_4000.csv  square.csv  toyDetector.csv  toyDetector_10000.csv  toyDetector_5000.csv
docs/: AssociationMapView_8hpp.html  AssociationMapView_8hpp.js  AssociationMapView_8hpp_source.html  AssociationMap_8hpp.html  AssociationMap_8hpp.js  AssociationMap_8hpp_source.html  CLUEstering_8hpp.html  CLUEstering_8hpp_source.html  ClusterProperties_8hpp.html  ClusterProperties_8hpp.js  ClusterProperties_8hpp_source.html  Clusterer_8hpp.html  Clusterer_8hpp_source.html  ConvolutionalKernel_8hpp.html  ConvolutionalKernel_8hpp.js  ConvolutionalKernel_8hpp_source.html  DistanceParameter_8hpp.html  DistanceParameter_8hpp.js  DistanceParameter_8hpp_source.html  PointsConversion_8hpp.html  PointsConversion_8hpp.js  PointsConversion_8hpp_source.html  PointsDevice_8hpp.html  PointsDevice_8hpp.js  PointsDevice_8hpp_source.html  PointsHost_8hpp.html  PointsHost_8hpp.js  PointsHost_8hpp_source.html  Tiles_8hpp_source.html  annotated.html  annotated_dup.js  classclue_1_1AssociationMap-members.html  classclue_1_1AssociationMap.html  classclue_1_1AssociationMap.js  classclue_1_1AssociationMapView-members.html  classclue_1_1AssociationMapView.html  classclue_1_1AssociationMapView.js  classclue_1_1ClusterProperties-members.html  classclue_1_1ClusterProperties.html  classclue_1_1ClusterProperties.js  (+94 more)
examples/: CMakeLists.txt  README.md  main.cpp
examples/basic/: CMakeLists.txt  main.cpp
examples/conan/: CMakeLists.txt  conanfile.txt
examples/cuda_native/: CMakeLists.txt  main.cu
examples/hip_native/: CMakeLists.txt  main.cpp
include/CLUEstering/DataFormats/test/: CMakeLists.txt  TestPoints.cpp
include/CLUEstering/test/: CMakeLists.txt  TestTilesExternal.cpp
pip/: setup.py
profiling/: CMakeLists.txt  README.md  main.cc  read_csv.hpp  test.cc
scripts/: packaging.sh  py_filter.sh
tests/: CMakeLists.txt  blob.csv  check_result.py  run_test.sh  test_aniso_dataset.py  test_association_map.cpp  test_batched_clustering.cpp  test_blob.py  test_blob_dataset.py  test_blobtime.py  test_change_domains.py  test_circles_dataset.py  test_cluster_centroid.cpp  test_cluster_centroid.py  test_clusterer.cpp  test_clusterer.py  test_clusterer_equality.py  test_clusterer_import.py  test_clusterer_properties.py  test_clustering.cpp  test_clustering_double.cpp  test_convolutional_kernels.cpp  test_device_points.cpp  test_distance_metrics.cpp  test_distance_metrics.py  test_distance_parameters.cpp  test_domain_extremes.py  test_draft.py  test_host_points.cpp  test_input_datatypes.py  test_kernels.py  test_list_devices.py  test_mahalanobis.cpp  test_moons_dataset.py  test_multiple_backends.py  test_partial_dimensional_clustering.py  test_plotters.py  test_points_factory.cpp  test_sissa_dataset.py  test_test_blobs.py  (+7 more)
tests/association_map/: build_map.hpp
tests/cpu/: CMakeLists.txt
tests/cuda/: CMakeLists.txt
tests/hip/: CMakeLists.txt
tests/sycl/: CMakeLists.txt
tests/test_datasets/: circles.csv  generate_nddata.py  make_3ddata.py  opposite_angles.csv  sissa_1000_truth.csv  square.csv  toyDetector_1000.csv
tests/test_datasets/truth_files/: blobs_truth.csv  circles_1000_truth.csv  moons_1000_truth.csv  sissa_1000_truth.csv  toy_det_1000_truth.csv
(+696 files in other folders)
